# test_nvrhi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/common/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DeviceManager_D3D12.cpp  DeviceManager_D3D12.h  DeviceManager_VK.cpp  DeviceManager_VK.h
src/triangle/: CMakeLists.txt  main.cpp
src/triangle/shaders/: compile_shaders.bat  triangle.hlsl  triangle.slang
